syntax = "proto3";

option java_package = "com.example.poc.grpc";

import "payments_processing_svc.proto";

message SendPaymentRequest {
  string msisdn = 1;
  string amount = 2;
  string currency = 3;
  string reference = 4;
  string url = 5;
  string recordId = 6;
}

service PaymentProviderService {
  rpc sendPayment(SendPaymentRequest) returns (AckPaymentSent);
  rpc getPaymentStatus(AckPaymentSent) returns(PaymentStatus);
}

message PaymentOutput {
  string id = 1; // from BaseEntity
  string payment_record_id = 2;
  string csvPaymentsOutputFilename = 3;
  string csvId = 4;
  string recipient = 5;
  string amount = 6; // BigDecimal
  string currency = 7; // Currency
  string conversation_id = 8;
  int64  status = 9; // Long
  string message = 10;
  string fee = 11; // BigDecimal
}

service ProcessPaymentStatusService {
  rpc remoteProcess(PaymentStatus) returns (PaymentOutput);
}

service PollAckPaymentSentService {
  rpc remoteProcess(AckPaymentSent) returns (PaymentStatus);
}
